--- a/apps/shop/templates/shop/index.html
+++ b/apps/shop/templates/shop/index.html
@@ -1,5 +1,5 @@
 {% extends "shop/base.html" %}
-{% block title %}Главная - NiceShop{% endblock %}
+{% block title %}Главная - Shop#1{% endblock %}
 {% block content %}
 <section class="py-5">
   <div class="container">
