--- a/apps/shop/templates/shop/base.html
+++ b/apps/shop/templates/shop/base.html
@@ -8,16 +8,19 @@
     <meta name="description" content="Интернет-магазин детской одежды Shop#1">
     <meta name="author" content="Shop#1">
 
+    <!-- Favicon -->
     <link rel="icon" href="{% static 'shop/assets/img/favicon.png' %}">
     <link rel="apple-touch-icon" href="{% static 'shop/assets/img/apple-touch-icon.png' %}">
 
-    <link href="{% static 'shop/assets/vendor/bootstrap/css/bootstrap.min.css' %}" rel="stylesheet">
-    <link href="{% static 'shop/assets/vendor/bootstrap-icons/bootstrap-icons.css' %}" rel="stylesheet">
+    <!-- Vendor CSS -->
+    <link href="{% static 'shop/vendors/bootstrap/bootstrap.min.css' %}" rel="stylesheet">
+    <link href="{% static 'shop/vendors/bootstrap-icons/bootstrap-icons.css' %}" rel="stylesheet">
     <link href="{% static 'shop/assets/vendor/aos/aos.css' %}" rel="stylesheet">
     <link href="{% static 'shop/assets/vendor/glightbox/css/glightbox.min.css' %}" rel="stylesheet">
     <link href="{% static 'shop/assets/vendor/swiper/swiper-bundle.min.css' %}" rel="stylesheet">
 
-    <link href="{% static 'shop/assets/css/main.css' %}" rel="stylesheet">
+    <!-- Custom CSS -->
+    <link rel="stylesheet" href="{% static 'shop/assets/css/theme.css' %}">
 
     {% block extra_head %}{% endblock %}
 </head>
@@ -53,13 +56,17 @@
         </div>
     </footer>
 
-    <script src="{% static 'shop/assets/vendor/bootstrap/js/bootstrap.bundle.min.js' %}"></script>
+    <!-- Vendor JS -->
+    <script src="{% static 'shop/vendors/@popperjs/popper.min.js' %}"></script>
+    <script src="{% static 'shop/vendors/bootstrap/bootstrap.min.js' %}"></script>
+    <script src="{% static 'shop/vendors/feather-icons/feather.min.js' %}"></script>
+    <script src="{% static 'shop/vendors/is/is.min.js' %}"></script>
     <script src="{% static 'shop/assets/vendor/aos/aos.js' %}"></script>
     <script src="{% static 'shop/assets/vendor/glightbox/js/glightbox.min.js' %}"></script>
     <script src="{% static 'shop/assets/vendor/swiper/swiper-bundle.min.js' %}"></script>
     <script src="{% static 'shop/assets/vendor/purecounter/purecounter_vanilla.js' %}"></script>
 
-
+    <!-- Custom JS -->
     <script src="{% static 'shop/assets/js/main.js' %}"></script>
 
     {% block scripts %}{% endblock %}
